refactor: replace google maps with nominatim and simplify geocoding logic